07-multi-container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multi-container
  labels:
    name: multi-container
spec:
  containers:
    - name: backend
      image: hamdi06/app-v1-backend
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
      ports:
        - containerPort: 3000
    - name: nginx
      image: nginx
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
      ports:
        - containerPort: 80
