08-env.yaml
apiVersion: v1
kind: Pod
metadata:
  name: environment
  labels:
    name: environment
spec:
  containers:
    - name: environment
      image: hamdi06/app-v1-backend
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
      ports:
        - containerPort: 3000
