10-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-secret
  labels:
    name: pod-secret
spec:
  containers:
    - name: pod-secret
      image: hamdi06/app-v1-backend
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
      ports:
        - containerPort: 3000
