19-pv-pvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contoh-pod-pv
spec:
  selector:
    matchLabels:
      app: contoh-pod-pv
  template:
    metadata:
      labels:
        app: contoh-pod-pv
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: example-persistent-claim
      containers:
        - name: contoh-pod-pv
          image: hamdi06/app-v1-backend
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: data
              mountPath: /app/data
