20-statefullset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: example-sts
spec:
  selector:
    matchLabels:
      app: example-sts
  serviceName: svc-statefullset
  replicas: 2
  template:
    metadata:
      labels:
        app: example-sts
    spec:
      containers:
        - name: example-sts
          image: hamdi06/app-v1-backend
          ports:
            - containerPort: 8089
          volumeMounts:
            - name: sts
              mountPath: /app/data
  volumeClaimTemplates:
    - metadata:
        name: sts
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
