11-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 8089
