12-external-name.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service
spec:
  type: ExternalName
  externalName: contoh-service.default.svc.cluster.local
  ports:
    - port: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: service-v2
spec:
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 3000
