13-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: contoh-nodeport
spec:
  type: NodePort
  selector:
    app: rs-service
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30001
