15-loadbalance.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: backend
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30020
