14-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: contoh-service
spec:
  selector:
    app: rs-service
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30021
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contoh-ingress
  labels:
    name: contoh-ingress
spec:
  rules:
    - host: contoh.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: contoh-service
                port:
                  number: 80
